# stm-boilerplate

./: .gitignore  .openocd.cfg  .prettyc  CMakeLists.txt  README.md
cmake/: common.cmake  debug.cmake  lint.cmake  stm-board.cmake  stm-chip.cmake  stm-naming.cmake  stm.cmake  toolchain.cmake
foo/: config.h.in  main.c  syscalls.c  sysmem.c
scripts/: debug.sh  install-toolchain.sh  rollup.sh
stm32/: stm32f303rexx_flash.ld  stm32f303xe.h
